--- a/printer_sales.css
+++ b/printer_sales.css
@@ -7,6 +7,12 @@ table {
 	border-collapse : collapse;
 }
 
+textarea {
+	font-size: 16px;
+	font-weigth: bold;
+	
+}
+
 .divisor-sale {
 	background-color : #c7c7c7;
 }
